[package]
name = "yearfloatclock"
version = "1.1.1"
authors = ["Bill Fraser <bill@wfraser.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = ">=0.3.36", features = ["local-offset", "parsing"] }
